[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/JoluMorsanDev/Cellparated.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 12.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 14 )

[node name="Cell" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.0610865
scale = Vector2( 1, 0.75 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
scale = Vector2( 1, 1.33333 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="Sprite"]
scale = Vector2( 0.75, 1.666 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprite"]
scale = Vector2( 1.25, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CellHit" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="CellHit"]
shape = SubResource( 2 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="CellHit" to="." method="_on_EnemyHitArea_area_entered"]
